--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.49.5",
+    "react-native-image-picker": "^0.26.7",
     "react-native-maps": "^0.19.0",
     "react-native-navigation": "^1.1.334",
     "react-native-vector-icons": "^4.4.3",
