--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # dependencies
 /node_modules
 
+/functions/node_modules
+/functions/places-awesome.json
+
 README.md
 .flowconfig
 .watchmanconfig
